force-app/main/default/objects/Test_Step__c/Test_Step__c.object-meta.xml
<CustomObject>
    <description>An individual UI interaction step within a Test Script. Each step is passed as a natural language instruction to the Claude computer-use agent, which executes it in the browser and evaluates the expected outcome.</description>
    <label>Test Step</label>
    <nameField>
        <label>Test Step Name</label>
        <type>AutoNumber</type>
        <displayFormat>STEP-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <pluralLabel>Test Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>