force-app/main/default/objects/Test_Step__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this step is skipped during test execution without deleting it. Useful for temporarily disabling a known-broken step.</description>
    <inlineHelpText>Uncheck to skip this step during runs without deleting it.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>