force-app/main/default/objects/Test_Step__c/fields/Continue_On_Fail__c.field-meta.xml
<CustomField>
    <fullName>Continue_On_Fail__c</fullName>
    <description>When checked, the test run continues to the next step even if this step fails. Overrides the parent Test Script setting for this specific step.</description>
    <inlineHelpText>Check to continue to the next step even if this one fails (overrides the script-level setting).</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Continue On Fail</label>
    <type>Checkbox</type>
</CustomField>