force-app/main/default/objects/Test_Step__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Natural language instruction sent directly to the Claude computer-use agent to execute in the browser. Write it as you would tell a human tester what to do.</description>
    <inlineHelpText>Write this as a plain English instruction (e.g. "Click the New button in the top right of the Opportunities list view").</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>