force-app/main/default/objects/Test_Step__c/fields/Max_Actions__c.field-meta.xml
<CustomField>
    <fullName>Max_Actions__c</fullName>
    <description>Maximum number of individual browser interactions (clicks, keystrokes, scrolls) the AI agent may take to complete this step before giving up. Prevents runaway loops.</description>
    <inlineHelpText>Default is 20. Raise for complex multi-click flows (e.g. wizard with many fields). Lower for simple single-click assertions.</inlineHelpText>
    <defaultValue>20</defaultValue>
    <label>Max Actions</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>