force-app/main/default/objects/Test_Step__c/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <description>Determines the execution order of this step within its parent Test Script. Steps are executed in ascending order.</description>
    <inlineHelpText>Steps run in ascending order (1, 2, 3...). Use gaps like 10, 20, 30 to leave room for inserts.</inlineHelpText>
    <label>Step Number</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>