force-app/main/default/objects/Test_Step__c/fields/Test_Script__c.field-meta.xml
<CustomField>
    <fullName>Test_Script__c</fullName>
    <description>The parent Test Script this step belongs to.</description>
    <label>Test Script</label>
    <referenceTo>Test_Script__c</referenceTo>
    <relationshipLabel>Test Steps</relationshipLabel>
    <relationshipName>Test_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>