force-app/main/default/objects/Test_Step__c/fields/Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Seconds__c</fullName>
    <description>Maximum number of seconds the AI agent may spend executing this single step before it is marked as timed out and failed.</description>
    <inlineHelpText>Default is 30 seconds. Increase for steps that trigger long-running processes (e.g. report generation, large data saves).</inlineHelpText>
    <defaultValue>30</defaultValue>
    <label>Timeout (Seconds)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>